--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,9 +19,9 @@
                         <a class="nav-link active" aria-current="page" href="#">Add employee</a>
 
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                            Launch demo modal
+                            Launch
                         </button>
-                        
+
                         <!-- Modal -->
                         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
                             aria-labelledby="exampleModalLabel" aria-hidden="true">
